# Gestor-de-Requisitos-Back

./: README.md  alembic.ini  basedatos.txt  create_tables.py  pyproject.toml  readmeSettings.txt  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 7706cb92c32b_init.py
app/: database.py  init_db.py  main.py
app/api/endpoints/: auth.py  chat_message.py  files.py  projects.py  requirements.py  state_machine.py
app/core/: config.py  security.py
app/models/: chat_message.py  project.py  requirement.py  sample_file.py  sample_requirement.py  state_machine.py  user.py
app/schemas/: chat_message.py  project.py  requirement.py  sample_file.py  state_machine.py  user.py
app/services/: chat_flow.py  context_builder.py  language.py  qa_parser.py  requirement_service.py
app/static/messages/: add_req_done_en.txt  add_req_done_es.txt  new_req_end.txt  project_welcome_ia1.txt  project_welcome_ia2.txt
app/static/prompts/: add_requisites.txt  analyze_requisites.txt  generate_new_requisites.txt  improve_requisites.txt  project_questions.txt  stall_chat.txt
app/utils/: analyze_parser.py  message_loader.py  ollama_client.py  preferences.py  prompt_loader.py
tests/: test_auth_me.py  test_auth_register_login.py  test_chat_messages.py  test_files_endpoints.py  test_projects.py  test_requirements.py  test_state_machine.py  test_user_update.py
